# marketplace-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4b34d6f18729_create_products_table.py  6dff69918e9b_initial_migration.py  95b23859fe27_create_orders_table.py
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  orders.py  products.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: base.py  order.py  product.py  user.py
app/schemas/: order.py  product.py  user.py
